@@ -1797,7 +1797,7 @@ enum OptionKey {
     OPTKEY_HIDE_HARD_LINKS,
     OPTKEY_RESOLVE_SYMLINKS,
     OPTKEY_BLOCK_DEVICES_AS_FILES,
-    OPTKEY_DIRECT_IO
+    OPTKEY_NO_DIRECT_IO
 };
 
 static int process_option(void *data, const char *arg, int key,
@@ -1905,8 +1905,8 @@ static int process_option(void *data, const char *arg, int key,
     case OPTKEY_BLOCK_DEVICES_AS_FILES:
         settings.block_devices_as_files = 1;
         return 0;
-    case OPTKEY_DIRECT_IO:
-        settings.direct_io = true;
+    case OPTKEY_NO_DIRECT_IO:
+        settings.direct_io = false;
         return 0;
     case OPTKEY_NONOPTION:
         if (!settings.mntsrc) {
@@ -2397,7 +2397,7 @@ int main(int argc, char *argv[])
 
         OPT2("--delete-deny", "delete-deny", OPTKEY_DELETE_DENY),
         OPT2("--rename-deny", "rename-deny", OPTKEY_RENAME_DENY),
-        OPT2("--direct-io", "direct-io", OPTKEY_DIRECT_IO),
+        OPT2("--no-direct-io", "no-direct-io", OPTKEY_NO_DIRECT_IO),
 
         OPT2("--hide-hard-links", "hide-hard-links", OPTKEY_HIDE_HARD_LINKS),
         OPT2("--resolve-symlinks", "resolve-symlinks", OPTKEY_RESOLVE_SYMLINKS),
@@ -2465,7 +2465,7 @@ int main(int argc, char *argv[])
 #ifdef __linux__
     settings.forward_odirect = 0;
     settings.odirect_alignment = 0;
-    settings.direct_io = false;
+    settings.direct_io = true;
 #endif
 
     atexit(&atexit_func);
